Bug 449031 - ActionToolBar Overflow button not visible when created while already overflowing
Summary: ActionToolBar Overflow button not visible when created while already overflowing
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.90.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: Not decided
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-23 20:08 UTC by Alexander Stippich
Modified: 2022-04-22 17:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.94
Sentry Crash Report:


Attachments
actionToolBar in skanpage (140.16 KB, image/jpeg)
2022-01-23 20:08 UTC, Alexander Stippich
Details
with annotations (150.98 KB, image/jpeg)
2022-01-23 20:16 UTC, Alexander Stippich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Stippich 2022-01-23 20:08:45 UTC
Created attachment 145816 [details]
actionToolBar in skanpage

SUMMARY
The overflow button is missing presumably when the ActionToolBar is created with the overflow already active.

STEPS TO REPRODUCE
1. In the attached picture of Skanpage, the "Page 1" item was created when the width of the left part of the split view was wide enough to display all actions.
2. Then the width of the left part is reduced and the ActionToolBar behaves correctly and overflows.
3. If now the next page "Page 2" is added, the overflow icon is not shown and will never appear.

OBSERVED RESULT
Overflow button does not appear when the ActionToolBar is created while already overflowing

EXPECTED RESULT
Overflow button appears

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.23.5
KDE Frameworks Version: 5.90
Qt Version: 5.15.2
Comment 1 Alexander Stippich 2022-01-23 20:16:29 UTC
Created attachment 145817 [details]
with annotations
Comment 2 Alexander Stippich 2022-04-15 16:43:52 UTC
Git commit 5e970d112f8479056b73e0463a9cfd072be2f6a9 by Alexander Stippich.
Committed on 15/04/2022 at 16:42.
Pushed by astippich into branch 'fixActionToolbar'.

fix moreButton visibility for ActionToolBar

when the button should be visible for construction

M  +1    -1    src/toolbarlayout.cpp

https://invent.kde.org/frameworks/kirigami/commit/5e970d112f8479056b73e0463a9cfd072be2f6a9
Comment 3 Nate Graham 2022-04-21 16:29:42 UTC
Can still reproduce even with that commit; looks like it's not fully fixed yet.
Comment 4 Alexander Stippich 2022-04-21 18:11:35 UTC
I falsely pushed to a non-"work" branch, the current MR is here: https://invent.kde.org/frameworks/kirigami/-/merge_requests/525
Comment 5 Nate Graham 2022-04-22 17:50:29 UTC
Git commit 7cc7a6388936240522d9ad4baf055d3c48956337 by Nate Graham, on behalf of Alexander Stippich.
Committed on 22/04/2022 at 17:50.
Pushed by ngraham into branch 'master'.

ActionToolBar: fix moreButton visibility

During construction, the parent height is still 0. Setting the height of
moreButton to 0 causes it to disappear and never become visible again.
Guard against setting it to 0.
FIXED-IN: 5.94

M  +14   -2    src/toolbarlayout.cpp
M  +16   -0    src/toolbarlayoutdelegate.cpp
M  +2    -0    src/toolbarlayoutdelegate.h

https://invent.kde.org/frameworks/kirigami/commit/7cc7a6388936240522d9ad4baf055d3c48956337