fix moreButton visibility for ActionToolBar

when the button should already be visible during construction

BUG:449031